# mditor

./: Cargo.toml  README.md
crates/link_graph/: Cargo.toml
crates/markdown_parser/: Cargo.toml
crates/mditor/: Cargo.toml
crates/mditor/src/: app.rs  main.rs
crates/mditor/src/custom_widget/: editor_canvas.rs  menu.rs  mod.rs
crates/mditor/src/helper/: icon.rs
crates/mditor/src/model/: editor_message.rs  error.rs  mod.rs
crates/piece_tree/: Cargo.toml  README.md
crates/piece_tree/src/: piece_tree.rs
crates/rope/: Cargo.toml  README.md
crates/rope/benches/: rope_benchmark.rs
crates/rope/src/: node.rs  rope.rs
crates/text_buffer/: Cargo.toml
crates/text_buffer/src/: buffer.rs  buffer_builder.rs  io.rs  lib.rs
