[package]
name = "rope"
version = "0.1.0"
edition = "2024"

[dependencies]
ropey = "1.6.1" # just for benchmarking baseline
unicode-segmentation = "1.12.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[lib]
path = "src/rope.rs"

[[bench]]
name = "rope_benchmark"
harness = false
